src/pyfx/model/common/jsonpath/JSONPathParser.py
# Generated from JSONPath.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class JSONPathParser ( Parser ):

    grammarFileName = "JSONPath.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'..'", "'.'", "'[?('", "'<'", "'>'", 
                     "'=='", "')]'", "'['", "':'", "']'", "','", "'[('", 
                     "'.length'", "'-'", "'*'", "'$'", "'@'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ROOT", "CURRENT", "ASCII", "STRING", "INT", "WS" ]

    RULE_jsonpath = 0
    RULE_expression = 1
    RULE_field = 2
    RULE_bracketField = 3

    ruleNames =  [ "jsonpath", "expression", "field", "bracketField" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    ROOT=16
    CURRENT=17
    ASCII=18
    STRING=19
    INT=20
    WS=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class JsonpathContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ROOT(self):
            return self.getToken(JSONPathParser.ROOT, 0)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSONPathParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(JSONPathParser.ExpressionContext,i)


        def getRuleIndex(self):
            return JSONPathParser.RULE_jsonpath

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterJsonpath" ):
                listener.enterJsonpath(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitJsonpath" ):
                listener.exitJsonpath(self)




    def jsonpath(self):

        localctx = JSONPathParser.JsonpathContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_jsonpath)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 8
            self.match(JSONPathParser.ROOT)
            self.state = 12
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSONPathParser.T__0) | (1 << JSONPathParser.T__1) | (1 << JSONPathParser.T__2) | (1 << JSONPathParser.T__7) | (1 << JSONPathParser.T__11))) != 0):
                self.state = 9
                self.expression()
                self.state = 14
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return JSONPathParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class BooleanFilterContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSONPathParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CURRENT(self):
            return self.getToken(JSONPathParser.CURRENT, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSONPathParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(JSONPathParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBooleanFilter" ):
                listener.enterBooleanFilter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBooleanFilter" ):
                listener.exitBooleanFilter(self)


    class NumericFilterContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSONPathParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CURRENT(self):
            return self.getToken(JSONPathParser.CURRENT, 0)
        def INT(self):
            return self.getToken(JSONPathParser.INT, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSONPathParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(JSONPathParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumericFilter" ):
                listener.enterNumericFilter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumericFilter" ):
                listener.exitNumericFilter(self)


    class ArraySliceContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSONPathParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(JSONPathParser.INT)
            else:
                return self.getToken(JSONPathParser.INT, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArraySlice" ):
                listener.enterArraySlice(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArraySlice" ):
                listener.exitArraySlice(self)


    class LengthContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSONPathParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CURRENT(self):
            return self.getToken(JSONPathParser.CURRENT, 0)
        def INT(self):
            return self.getToken(JSONPathParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLength" ):
                listener.enterLength(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLength" ):
                listener.exitLength(self)


    class ArrayIndexContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSONPathParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(JSONPathParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterArrayIndex" ):
                listener.enterArrayIndex(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitArrayIndex" ):
                listener.exitArrayIndex(self)


    class UnionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSONPathParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(JSONPathParser.STRING)
            else:
                return self.getToken(JSONPathParser.STRING, i)
        def INT(self, i:int=None):
            if i is None:
                return self.getTokens(JSONPathParser.INT)
            else:
                return self.getToken(JSONPathParser.INT, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterUnion" ):
                listener.enterUnion(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitUnion" ):
                listener.exitUnion(self)


    class StringFilterContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSONPathParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CURRENT(self):
            return self.getToken(JSONPathParser.CURRENT, 0)
        def STRING(self):
            return self.getToken(JSONPathParser.STRING, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(JSONPathParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(JSONPathParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStringFilter" ):
                listener.enterStringFilter(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStringFilter" ):
                listener.exitStringFilter(self)


    class BracketChildContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSONPathParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def bracketField(self):
            return self.getTypedRuleContext(JSONPathParser.BracketFieldContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBracketChild" ):
                listener.enterBracketChild(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBracketChild" ):
                listener.exitBracketChild(self)


    class RecursiveChildContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSONPathParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def field(self):
            return self.getTypedRuleContext(JSONPathParser.FieldContext,0)

        def bracketField(self):
            return self.getTypedRuleContext(JSONPathParser.BracketFieldContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRecursiveChild" ):
                listener.enterRecursiveChild(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRecursiveChild" ):
                listener.exitRecursiveChild(self)


    class DotChildContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a JSONPathParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def field(self):
            return self.getTypedRuleContext(JSONPathParser.FieldContext,0)

        def bracketField(self):
            return self.getTypedRuleContext(JSONPathParser.BracketFieldContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDotChild" ):
                listener.enterDotChild(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDotChild" ):
                listener.exitDotChild(self)



    def expression(self):

        localctx = JSONPathParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expression)
        self._la = 0 # Token type
        try:
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
            if la_ == 1:
                localctx = JSONPathParser.RecursiveChildContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 15
                self.match(JSONPathParser.T__0)
                self.state = 18
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [JSONPathParser.T__14, JSONPathParser.ASCII]:
                    self.state = 16
                    self.field()
                    pass
                elif token in [JSONPathParser.T__7]:
                    self.state = 17
                    self.bracketField()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 2:
                localctx = JSONPathParser.DotChildContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 20
                self.match(JSONPathParser.T__1)
                self.state = 23
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [JSONPathParser.T__14, JSONPathParser.ASCII]:
                    self.state = 21
                    self.field()
                    pass
                elif token in [JSONPathParser.T__7]:
                    self.state = 22
                    self.bracketField()
                    pass
                else:
                    raise NoViableAltException(self)

                pass

            elif la_ == 3:
                localctx = JSONPathParser.BracketChildContext(self, localctx)
                self.enterOuterAlt(localctx, 3)
                self.state = 25
                self.bracketField()
                pass

            elif la_ == 4:
                localctx = JSONPathParser.NumericFilterContext(self, localctx)
                self.enterOuterAlt(localctx, 4)
                self.state = 27
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==JSONPathParser.T__0 or _la==JSONPathParser.T__1:
                    self.state = 26
                    _la = self._input.LA(1)
                    if not(_la==JSONPathParser.T__0 or _la==JSONPathParser.T__1):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 29
                self.match(JSONPathParser.T__2)
                self.state = 30
                self.match(JSONPathParser.CURRENT)
                self.state = 34
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSONPathParser.T__0) | (1 << JSONPathParser.T__1) | (1 << JSONPathParser.T__2) | (1 << JSONPathParser.T__7) | (1 << JSONPathParser.T__11))) != 0):
                    self.state = 31
                    self.expression()
                    self.state = 36
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 37
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSONPathParser.T__3) | (1 << JSONPathParser.T__4) | (1 << JSONPathParser.T__5))) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 38
                self.match(JSONPathParser.INT)
                self.state = 39
                self.match(JSONPathParser.T__6)
                pass

            elif la_ == 5:
                localctx = JSONPathParser.StringFilterContext(self, localctx)
                self.enterOuterAlt(localctx, 5)
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==JSONPathParser.T__0 or _la==JSONPathParser.T__1:
                    self.state = 40
                    _la = self._input.LA(1)
                    if not(_la==JSONPathParser.T__0 or _la==JSONPathParser.T__1):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 43
                self.match(JSONPathParser.T__2)
                self.state = 44
                self.match(JSONPathParser.CURRENT)
                self.state = 48
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSONPathParser.T__0) | (1 << JSONPathParser.T__1) | (1 << JSONPathParser.T__2) | (1 << JSONPathParser.T__7) | (1 << JSONPathParser.T__11))) != 0):
                    self.state = 45
                    self.expression()
                    self.state = 50
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 51
                self.match(JSONPathParser.T__5)
                self.state = 52
                self.match(JSONPathParser.STRING)
                self.state = 53
                self.match(JSONPathParser.T__6)
                pass

            elif la_ == 6:
                localctx = JSONPathParser.BooleanFilterContext(self, localctx)
                self.enterOuterAlt(localctx, 6)
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==JSONPathParser.T__0 or _la==JSONPathParser.T__1:
                    self.state = 54
                    _la = self._input.LA(1)
                    if not(_la==JSONPathParser.T__0 or _la==JSONPathParser.T__1):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 57
                self.match(JSONPathParser.T__2)
                self.state = 58
                self.match(JSONPathParser.CURRENT)
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << JSONPathParser.T__0) | (1 << JSONPathParser.T__1) | (1 << JSONPathParser.T__2) | (1 << JSONPathParser.T__7) | (1 << JSONPathParser.T__11))) != 0):
                    self.state = 59
                    self.expression()
                    self.state = 64
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 65
                self.match(JSONPathParser.T__6)
                pass

            elif la_ == 7:
                localctx = JSONPathParser.ArraySliceContext(self, localctx)
                self.enterOuterAlt(localctx, 7)
                self.state = 67
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==JSONPathParser.T__0 or _la==JSONPathParser.T__1:
                    self.state = 66
                    _la = self._input.LA(1)
                    if not(_la==JSONPathParser.T__0 or _la==JSONPathParser.T__1):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 69
                self.match(JSONPathParser.T__7)
                self.state = 71
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==JSONPathParser.INT:
                    self.state = 70
                    self.match(JSONPathParser.INT)


                self.state = 73
                self.match(JSONPathParser.T__8)
                self.state = 75
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==JSONPathParser.INT:
                    self.state = 74
                    self.match(JSONPathParser.INT)


                self.state = 79
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==JSONPathParser.T__8:
                    self.state = 77
                    self.match(JSONPathParser.T__8)
                    self.state = 78
                    self.match(JSONPathParser.INT)


                self.state = 81
                self.match(JSONPathParser.T__9)
                pass

            elif la_ == 8:
                localctx = JSONPathParser.ArrayIndexContext(self, localctx)
                self.enterOuterAlt(localctx, 8)
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==JSONPathParser.T__0 or _la==JSONPathParser.T__1:
                    self.state = 82
                    _la = self._input.LA(1)
                    if not(_la==JSONPathParser.T__0 or _la==JSONPathParser.T__1):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 85
                self.match(JSONPathParser.T__7)
                self.state = 86
                self.match(JSONPathParser.INT)
                self.state = 87
                self.match(JSONPathParser.T__9)
                pass

            elif la_ == 9:
                localctx = JSONPathParser.UnionContext(self, localctx)
                self.enterOuterAlt(localctx, 9)
                self.state = 89
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==JSONPathParser.T__0 or _la==JSONPathParser.T__1:
                    self.state = 88
                    _la = self._input.LA(1)
                    if not(_la==JSONPathParser.T__0 or _la==JSONPathParser.T__1):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 91
                self.match(JSONPathParser.T__7)
                self.state = 106
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [JSONPathParser.STRING]:
                    self.state = 92
                    self.match(JSONPathParser.STRING)
                    self.state = 95 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 93
                        self.match(JSONPathParser.T__10)
                        self.state = 94
                        self.match(JSONPathParser.STRING)
                        self.state = 97 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==JSONPathParser.T__10):
                            break

                    pass
                elif token in [JSONPathParser.INT]:
                    self.state = 99
                    self.match(JSONPathParser.INT)
                    self.state = 102 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 100
                        self.match(JSONPathParser.T__10)
                        self.state = 101
                        self.match(JSONPathParser.INT)
                        self.state = 104 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==JSONPathParser.T__10):
                            break

                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 108
                self.match(JSONPathParser.T__9)
                pass

            elif la_ == 10:
                localctx = JSONPathParser.LengthContext(self, localctx)
                self.enterOuterAlt(localctx, 10)
                self.state = 110
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==JSONPathParser.T__0 or _la==JSONPathParser.T__1:
                    self.state = 109
                    _la = self._input.LA(1)
                    if not(_la==JSONPathParser.T__0 or _la==JSONPathParser.T__1):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 112
                self.match(JSONPathParser.T__11)
                self.state = 113
                self.match(JSONPathParser.CURRENT)
                self.state = 114
                self.match(JSONPathParser.T__12)
                self.state = 115
                self.match(JSONPathParser.T__13)
                self.state = 116
                self.match(JSONPathParser.INT)
                self.state = 117
                self.match(JSONPathParser.T__6)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FieldContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASCII(self):
            return self.getToken(JSONPathParser.ASCII, 0)

        def getRuleIndex(self):
            return JSONPathParser.RULE_field

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterField" ):
                listener.enterField(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitField" ):
                listener.exitField(self)




    def field(self):

        localctx = JSONPathParser.FieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_field)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            _la = self._input.LA(1)
            if not(_la==JSONPathParser.T__14 or _la==JSONPathParser.ASCII):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BracketFieldContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(JSONPathParser.STRING, 0)

        def getRuleIndex(self):
            return JSONPathParser.RULE_bracketField

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBracketField" ):
                listener.enterBracketField(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBracketField" ):
                listener.exitBracketField(self)




    def bracketField(self):

        localctx = JSONPathParser.BracketFieldContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bracketField)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.match(JSONPathParser.T__7)
            self.state = 123
            self.match(JSONPathParser.STRING)
            self.state = 124
            self.match(JSONPathParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx





